<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openmrs.module</groupId>
    <artifactId>emrapi</artifactId>
    <version>1.28.0</version>
    <packaging>pom</packaging>
    <name>EMR API Module</name>
    <description>Higher-level APIs to support building EMR functionality in OpenMRS, to supplement the data-level APIs
        in the OpenMRS core.
    </description>
    <url>https://wiki.openmrs.org/display/docs/EMR+API+Module+Module</url>

    <developers>
        <developer>
            <name>OpenMRS</name>
        </developer>
    </developers>

    <organization>
        <name>OpenMRS</name>
        <url>http://openmrs.org</url>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:openmrs/openmrs-module-emrapi.git</connection>
        <developerConnection>scm:git:git@github.com:openmrs/openmrs-module-emrapi.git</developerConnection>
        <url>https://github.com/openmrs/openmrs-module-emrapi.git</url>
      <tag>1.28.0</tag>
  </scm>

    <modules>
        <module>api</module>
        <module>api-1.10</module>
        <module>api-1.11</module>
        <module>api-1.12</module>
        <module>api-2.2</module>
        <module>web-2.2</module>
        <module>condition-list</module>
        <module>omod</module>
	    <module>api-pre2.2</module>
		<module>web-pre2.2</module>
	</modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
        <reportingVersion>0.10.4</reportingVersion>
        <serialization.xstreamVersion>0.2.14</serialization.xstreamVersion>
        <calculationVersion>1.1</calculationVersion>
        <providermanagementVersion>2.5.0</providermanagementVersion>
        <metadatamappingVersion>1.2.1</metadatamappingVersion>
        <metadatasharingVersion>1.2.2</metadatasharingVersion>
        <eventVersion>2.5</eventVersion>
        <allergyapiVersion>1.4</allergyapiVersion>
        <webservices.restVersion>2.16</webservices.restVersion>
        <openMRSVersion>1.11.6</openMRSVersion>
        <jacksonVersion>1.5.0</jacksonVersion>
        <reportingApiConditionalArtifactId>reporting-api-1.9</reportingApiConditionalArtifactId>
    </properties>

    <dependencyManagement>
        <dependencies>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>reporting-api</artifactId>
				<version>${reportingVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>${reportingApiConditionalArtifactId}</artifactId>
				<version>${reportingVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api</artifactId>
				<version>${serialization.xstreamVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api-1.9</artifactId>
				<version>${serialization.xstreamVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api-1.10</artifactId>
				<version>${serialization.xstreamVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api-2.0</artifactId>
				<version>${serialization.xstreamVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>calculation-api</artifactId>
				<version>${calculationVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>providermanagement-api</artifactId>
				<version>${providermanagementVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>metadatasharing-api</artifactId>
				<version>${metadatasharingVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs</groupId>
				<artifactId>event-api</artifactId>
				<version>${eventVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs</groupId>
				<artifactId>event-api-1.x</artifactId>
				<version>${eventVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs</groupId>
				<artifactId>event-api-2.x</artifactId>
				<version>${eventVersion}</version>
				<scope>provided</scope>
			</dependency>
            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>metadatamapping-api</artifactId>
                <version>${metadatamappingVersion}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>${reportingApiConditionalArtifactId}</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.9</artifactId>
            <scope>provided</scope>
        </dependency>

		<dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.10</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>1.7.6</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatamapping-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api-1.x</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api-2.x</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-jms_1.1_spec</artifactId>
            <version>1.1.1</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        

        

        <dependency>
            <groupId>org.openmrs.contrib</groupId>
            <artifactId>testutils</artifactId>
            <version>${openmrsTestutilsVersion}</version>
            <scope>test</scope>
        </dependency>

        

        

        
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.9.2</version>
        </dependency>

        <dependency>
            <groupId>uk.co.modular-it</groupId>
            <artifactId>hamcrest-date</artifactId>
            <version>0.9.3</version>
        </dependency>

        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>${jacksonVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>${jacksonVersion}</version>
            <scope>provided</scope>
        </dependency>

        

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                        
                        <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                    </configuration>
                </plugin>
                
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
                <plugin>
					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
					<artifactId>maven-java-formatter-plugin</artifactId>
					<version>0.3</version>
					<configuration>
						<compilerSource>${javaCompilerVersion}</compilerSource>
						<compilerCompliance>${javaCompilerVersion}</compilerCompliance>
						<compilerTargetPlatform>${javaCompilerVersion}</compilerTargetPlatform>
						<configFile>eclipse/OpenMRSFormatter.xml</configFile>
						<overrideConfigCompilerVersion>true</overrideConfigCompilerVersion>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.openmrs.tools</groupId>
							<artifactId>openmrs-tools</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
				</plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

<profiles>
	<profile>
        <id>vulas</id>
        <activation>
            <property>
                <name>vulas</name>
            </property>
        </activation>
        <properties>
            <vulas.version>3.1.10-SNAPSHOT</vulas.version>
            <vulas.shared.backend.serviceUrl>http://localhost:8033/backend/</vulas.shared.backend.serviceUrl>
            <vulas.core.space.token>9237B647D37B9176837CB401EE2922F6</vulas.core.space.token>
            <vulas.core.appContext.group>${project.groupId}</vulas.core.appContext.group>
            <vulas.core.appContext.artifact>${project.artifactId}</vulas.core.appContext.artifact>
            <vulas.core.appContext.version>${project.version}</vulas.core.appContext.version>
        </properties>
        <build>
            <plugins>
                <plugin>
                    <groupId>com.sap.research.security.vulas</groupId>
                    <artifactId>plugin-maven</artifactId>
                    <version>${vulas.version}</version>
                    <configuration>
                        <layeredConfiguration>
                            <vulas.shared.backend.serviceUrl>${vulas.shared.backend.serviceUrl}</vulas.shared.backend.serviceUrl>
                            <vulas.core.space.token>${vulas.core.space.token}</vulas.core.space.token>

                            <vulas.core.appContext.group>${vulas.core.appContext.group}</vulas.core.appContext.group>
                            <vulas.core.appContext.artifact>${vulas.core.appContext.artifact}</vulas.core.appContext.artifact>
                            <vulas.core.appContext.version>${vulas.core.appContext.version}</vulas.core.appContext.version>

                            <vulas.shared.tmpDir>${project.build.directory}/vulas/tmp</vulas.shared.tmpDir>
                            <vulas.core.uploadDir>${project.build.directory}/vulas/upload</vulas.core.uploadDir>
                            <vulas.core.app.sourceDir>${project.build.directory}/classes,${project.basedir}/src/main/java,${project.basedir}/src/main/python</vulas.core.app.sourceDir>

                            
                            <vulas.core.instr.sourceDir>${project.build.directory}</vulas.core.instr.sourceDir>
                            <vulas.core.instr.targetDir>${project.build.directory}/vulas/target</vulas.core.instr.targetDir>
                            <vulas.core.instr.includeDir>${project.build.directory}/vulas/include</vulas.core.instr.includeDir>
                            <vulas.core.instr.libDir>${project.build.directory}/vulas/lib</vulas.core.instr.libDir>
                            <vulas.core.instr.writeCode>false</vulas.core.instr.writeCode>
                            <vulas.core.instr.instrumentorsChoosen>com.sap.psr.vulas.monitor.trace.SingleTraceInstrumentor</vulas.core.instr.instrumentorsChoosen>
                            <vulas.core.instr.searchRecursive>false</vulas.core.instr.searchRecursive>
                            <vulas.core.monitor.periodicUpload.enabled>false</vulas.core.monitor.periodicUpload.enabled>
                            <vulas.core.instr.maxStacktraces>10</vulas.core.instr.maxStacktraces>

                            
                            <vulas.reach.wala.callgraph.reflection>NO_FLOW_TO_CASTS_NO_METHOD_INVOKE</vulas.reach.wala.callgraph.reflection>
                            <vulas.reach.timeout>60</vulas.reach.timeout>

                            
                            <vulas.report.exceptionExcludeBugs />
                            <vulas.report.reportDir>${project.build.directory}/vulas/report</vulas.report.reportDir>
                        </layeredConfiguration>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
    </profiles></project>